# fraud-network

./: pyproject.toml
fraud_network/: main.py
fraud_network/utils/: gera_sample.py
tests/: random_number.ipynb
