[tool.poetry]
name = "fraud-network"
version = "0.1.0"
description = ""
authors = ["Guilherme Lourenco <gui.lourenzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
networkx = "^3.4.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
shap = "^0.46.0"
streamlit = "^1.40.1"
ruff = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
